--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,8 @@ main {
 }
 
 h1 {
-    background-image: linear-gradient(to left, violet, indigo, blue, green, orange, red);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    color: rgb(113, 20, 220);
+    text-shadow: 2px 3px darkgoldenrod;
     font-size: 100px;
     font-family: 'Dancing Script', cursive;
 }
@@ -30,14 +29,15 @@ select {
     margin-top: 15px;
 }
 
-div {
+.card {
     background-color: rgb(218, 233, 152);
     border: 5px solid rgb(255, 0, 191);
-    display: flex;
-    flex-direction: column;
     margin-top: 20px;
     text-align: center;
     width: 400px;
+    height: 400px;
+    position: relative;
+    overflow: hidden;
 }
 
 #photo-template {
@@ -47,27 +47,61 @@ div {
     justify-content: space-around;
 }
 
-div:hover {
-    border: 5px solid rgb(80, 0, 60);
-}
-
 img {
     width: 400px;
-    height: 300px;
+    height: 400px;
     margin-right: auto;
     margin-left: auto;
+    transition: filter 0.8s;
+}
+
+/* img:hover {
+    filter: blur(8px);
+    -webkit-filter: blur(8px);
+    transition: filter 0.8s;
+} */
+
+img:hover~h2 {
+    opacity: .8;
+    transition: opacity 0.5s;
 }
 
 div p {
+    font-family: 'Indie Flower', cursive;
     font-size: 30px;
     margin: 10px 0px;
-    font-family: 'Indie Flower', cursive;
 }
 
-div h2 {
+h2 {
     margin: 10px 0px;
     font-size: 40px;
     font-family: 'Patrick Hand', cursive;
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 1);
+    /* Black w/opacity/see-through */
+    color: white;
+    font-weight: bold;
+    border: 3px solid #f1f1f1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 80%;
+    padding: 20px;
+    text-align: center;
+    opacity: 0;
+}
+
+h2:hover {
+    opacity: .8;
+    transition: opacity 0.5s;
+}
+
+h2:hover~img {
+    filter: blur(8px);
+    -webkit-filter: blur(8px);
+    transition: filter 0.8s;
 }
 
 select {
@@ -75,7 +109,6 @@ select {
     color: rgb(194, 212, 111);
     font-family: 'Righteous', cursive;
     width: 200px;
-    /* margin-bottom: 0px; */
 }
 
 button {
@@ -89,25 +122,8 @@ button {
 
 .pages {
     margin-top: 0;
-    /* border-style: solid; */
 }
 
 .select {
     margin-bottom: 0px;
-    /* border-style: solid; */
 }
-
-/* #box{
-    background-color: rgb(255, 0, 0);
-    border-style: solid;
-    opacity: .6;
-    z-index: -1;
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    width: 99.5%;
-    height: 100%;
-    text-align: center;
-    vertical-align: middle;
-    line-height: 4100px;
-} */
